test: Implement functionalities to load quiz answers to general websocket clients

--- a/src/main/webapp/resources/css/quizRoom.css
+++ b/src/main/webapp/resources/css/quizRoom.css
@@ -19,10 +19,22 @@
 .questionWrapper {
     display: flex;
     justify-content: center;
+    gap: 16px;
+    margin-top: 16px;
 }
 
 .chatRoomWrapper {
     grid-area: chatRoom;
     display: grid;
     place-content: center;
+    visibility: hidden;
+}
+
+#nextQuestion {
+    display: none;
+}
+
+.answersWrapper {
+    display: flex;
+    justify-content: center;
 }
